unit_tests/preprocessor/errors/forbid-dotdot-include.correct
preprocessor/errors/forbid-dotdot-include:1: error: '..' paths in #include directives are forbidden
